# dining_philosophers

./: IspisProjekta  README.md  main.cpp  meson.build
include/chopsticks/: Chopstick.hpp
include/chopsticks/behaviors/: Available.hpp  Taken.hpp
include/configuration/: Atoms.hpp
include/philosophers/: Philosopher.hpp
lib/libcaf_core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/libcaf_core/caf/detail/: build_config.hpp
lib/libcaf_io/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/chopsticks/behaviors/: Available.cpp  Taken.cpp
src/philosophers/: Philosopher.cpp
